# natively-cluely-ai-assistant

./: .env.example  .gitignore  README.md  doc.md  electron_d_ours.ts  electron_d_theirs.ts  iamsrikanthnani-pluely-8a5edab282632443.txt  index.html  launcher_ours.tsx  launcher_theirs.tsx  main_tail.txt  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.mts
.kilocode/rules/: 1md.md  natively.md
docs/: 01_general-description.md  02_architecture.md  03_tech-stack.md  04_audio-system.md  05_ai-module.md  06_appstate.md  07_ui-ux.md  08_security.md  09_rag-system.md  10_updates-and-system.md  11_dependency-update-plan.md  12_bun-migration-plan.md
electron/: DonationManager.ts  IntelligenceManager.ts  LLMHelper.ts  ModelSelectorWindowHelper.ts  ProcessingHelper.ts  ScreenshotHelper.ts  SettingsWindowHelper.ts  ThemeManager.ts  WindowHelper.ts  ipcHandlers.ts  main.ts  preload.ts  tsconfig.json
electron/audio/: AudioDevices.ts  DeepgramStreamingSTT.ts  GoogleSTT.ts  MicrophoneCapture.ts  RestSTT.ts  SystemAudioCapture.ts
electron/db/: DatabaseManager.ts  seedDemo.ts  test-db.ts
electron/llm/: AnswerLLM.ts  AssistLLM.ts  FollowUpLLM.ts  FollowUpQuestionsLLM.ts  RecapLLM.ts  WhatToAnswerLLM.ts  prompts.ts
electron/rag/: EmbeddingPipeline.ts  RAGManager.ts  RAGRetriever.ts
electron/services/: CalendarManager.ts  CredentialsManager.ts  InstallPingManager.ts  KeybindManager.ts
electron/update/: ReleaseNotesManager.ts
electron/utils/: logger.ts
native-module/: Cargo.toml  index.d.ts
native-module/src/: audio_config.rs  lib.rs  microphone.rs  vad.rs  (+2 more)
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: calendar.rs  commands.rs  lib.rs
src-tauri/src/audio/: mod.rs
src-tauri/src/intelligence/: manager.rs
src-tauri/src/llm/: client.rs  mod.rs  prompts.rs
src-tauri/src/speaker/: mod.rs
(+34 files in other folders)
