[package]
name = "natively"
version = "0.1.0"
description = "Natively - AI Interview Copilot"
authors = ["Natively"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-global-shortcut = "2" # For "Cmd+Shift+X" etc
tauri-plugin-sql = { version = "2", features = ["sqlite"] } # Replacement for better-sqlite3

# JSON & Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async Runtime
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
tokio-stream = "0.1"
async-stream = "0.3"

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# HTTP
reqwest = { version = "0.12", features = ["json", "stream", "multipart"] }

# Utilities
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
once_cell = "1.19"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }

# Audio Capture (Pluely Stack)
cpal = "0.15"
hound = "3.5"
ringbuf = "0.4"
xcap = "0.0.9" # For screenshots
image = "0.25" # To encode to PNG



# Calendar Auth
tiny_http = "0.12"
url = "2.5"
open = "5.1"

# Google STT (gRPC)
tonic = { version = "0.12", features = ["tls", "tls-roots"] }
prost = "0.13"
prost-types = "0.13"
# Pre-compiled protos
google-api-proto = { version = "1", features = ["google-cloud-speech-v1"] }
tauri-plugin-process = "2.3.1"
tauri-plugin-autostart = "2.5.1"

[target.'cfg(target_os = "macos")'.dependencies]
tauri-plugin-macos-permissions = "2"
cidre = "0.11.3" # CoreAudio replacement for BlackHole

[target.'cfg(target_os = "windows")'.dependencies]
wasapi = "0.19.0"
